--- a/public/stylesheets/countdown.css
+++ b/public/stylesheets/countdown.css
@@ -2,30 +2,30 @@
 img {
 max-width: 100%; 
 max-height: 100%;
-width: auto;
-height: auto; 
+width: 100%;
+height: 100%; 
 position:absolute;
 top:0;
 }
 
 
-p {
+body {
 	font-family:arial, sans-serif;
-	font-size:1em;
+	font-size:72px;
 	color:white;
 	font-weight:bold;
 	text-align:center;
 }
 
 #countbox1{
-font:1em Arial;
+font-family:arial, sans-serif;
 color:white;
 font-weight:bold;
 text-align:center;
 }
 
 #meat{
-	
+	font-size:1.3em;
 	margin:6% auto;
 	position:relative;
 	width:50%;
@@ -34,7 +34,8 @@ text-align:center;
 	width:95%;
 }
 
+
 html{
-	background-color:<img src="/images/dock.png" ></img>;
 	
+	background-color:#F2FFFF;
 }
