--- a/public/stylesheets/countdown.css
+++ b/public/stylesheets/countdown.css
@@ -14,6 +14,10 @@ body {
 	font-size:72px;
 	color:white;
 	font-weight:bold;
+	
+}
+
+#center{
 	text-align:center;
 }
 
@@ -34,6 +38,13 @@ text-align:center;
 	width:95%;
 }
 
+#checklist{
+	font-size:.5em;
+	margin:10% 5%;
+	float:left;
+	position:relative;
+	z-index:501;
+}
 
 html{
 	
